CDB: fix columns going out of the screen

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -415,9 +415,6 @@
 					display: inline-block;
 					max-width: 600px;
 					&.cdb-large {
-						.cdb-sheet {
-							min-width: 800px;
-						}
 						max-width: 1000px;
 					}
 				}
